src/Resources/public/css/be_stylesheet.css
#tl_buttons{
    display:flex;
    text-align: left;
    justify-content: flex-end;
    flex-wrap: wrap;
    line-height: 2;
}
/** editAll & overrideAll navbar */
#editAllNavbarHelper {
    position: fixed;
    bottom: 0;
    right: 0;
    background-color: #f47c00;
    z-index: 2000;
}

#editAllNavbarHelper ul {
    display: flex;
}

#editAllNavbarHelper ul, #editAllNavbarHelper li {
    padding: 0;
    margin: 0;
    list-style-type: none;
}

#editAllNavbarHelper button {
    margin: 15px 8px;
    padding: 6px;
    background-color: #000;
    color: #fff;
    border: 0;
}

#editAllNavbarHelper button:hover {
    background-color: #aa0000;
}

/** new_repeat im multicolumn wizard ausblenden**/
table#ctrl_eventDates thead tr:first-child {
    display: none;
}

/** Highlight main instructor **/
#tl_calendar_events #ctrl_instructor tr:first-child td #ctrl_instructor_row0_instructorId_chzn {
    background-color: #abd289;
}

#tl_navigation .group-sac_be_modules {
    background: url(../../markocupicsaceventtool/icons/sun.svg) 3px 2px no-repeat;
}

/** Global operations**/
#tl_buttons .header_icon.download_registration_list,
#tl_buttons .header_icon.send_email,
#tl_buttons .header_icon.global_op_icon_class {
    background-size: 16px 16px;
    padding: 3px 0 3px 21px;
    background-position: left center;
    background-repeat: no-repeat;
    margin-left: 15px;
}

#tl_calendar_events_member #refuseWithEmail {
    background-color: red;
    color: white;
    border-color: red;
}

#tl_calendar_events_member #acceptWithEmail {
    background-color: darkgreen;
    color: white;
    border-color: darkgreen;
}

/** Contao haste easy ajax operations icons **/
.tl_listing_container.list_view a.toggleStateOfParticipation img {
    width: 16px;
    height: 16px;
}

/** Subscription state legend and participation state legend in tl_calendar_events_member **/
div.legend-box {
    display: flex;
    flex-direction: row;
}

div.legend-box > div {
    margin-top: 3rem;
    margin-right: 2rem;
}

div.legend-box h3 {
    margin-bottom: 0.75rem;
}

div.legend-box li {
    line-height: 1.5;
}

#pal_stateOfParticipation_legend, #pal_stateOfSubscription_legend {
    background-color: #f3f3f5;
}

#acceptAutocompleteBox {
    padding: 15px 0;
}

#acceptAutocompleteBox button {
    margin-right: 20px;
}

#acceptAutocompleteBox strong {
    font-weight: bold;
    color: #000;
}

#acceptAutocompleteBox .autocompleteInfo {
    color: green
}

.tl_formbody_edit div.readonly {
    margin: 0 15px;
    position: relative;
    width: calc(100% - 30px);
}

.tl_formbody_edit div.readonly .field-content-box {
    border: 1px solid #aaa;
    padding: 8px 5px;
    background-color: lightgray;
    box-sizing: border-box;
    border: 1px solid #aaa;
    border-radius: 2px;
    width: 100%;
    line-height: 1.4;
    min-height: 37px;
}

.tl_content_right .invoice img,
.tl_content_right .generateInvoicePdf img,
.tl_content_right .generateInvoiceDocx img {
    width: 16px !important;
    height: auto !important;
}

div.tl_header_tour_rapport {
    background-color: #f3f3f5;
    display: block;
    border-top: 1px solid grey;
    border-bottom: 1px solid grey;
}

div.tl_header_tour_rapport table td {
    padding: 10px;
}

/** tl_calendar_events Show subscription state **/
.subscription-badge {
    background-color: darkgray;
    font-size: x-small;
    border-radius: 5px;
    padding: 3px 8px;
    margin-left: 20px;
    cursor: pointer;
}

.subscription-badge.not-confirmed {
    background-color: #cccccc;
    animation: blinker 2s step-start infinite;
}

.col_stateOfSubscription img[alt="subscription-not-confirmed"] {
    animation: blinker 2s step-start infinite;
}

@keyframes blinker {
    50% {
        opacity: 0;
    }
}

.subscription-badge.accepted {
    background-color: #91dc5a;
}

.subscription-badge.waitlisted {
    background-color: #006df0;
}

.subscription-badge.refused {
    background-color: #d80027;
}

.subscription-badge.unsubscribed-user {
    background-color: #d86811;
}

#tl_messages h3 {
    font-size: .875rem;
    margin: 15px 0 5px;
}

#tl_upcoming_events th {
    background: #f6f6f8;
    padding: 6px;
    border-top: 1px solid #e9e9e9;
}

#tl_upcoming_events td {
    border-bottom: 1px solid #e9e9e9;
    padding: 6px 6px;
}

#tl_upcoming_events tr.past-event td {
    background-color: #ffe8e8;
}

/** alerts **/
.alert {
    margin: 15px;
    padding: 15px;
}

.alert.alert-danger {
    background: red;
    color: white;
}

.alert.alert-primary {
    background: #cce5ff;
    color: #000;
}

.alert.alert-success {
    background: #d4edda;
    color: #000;
}

.notice {
    font-weight: bold;
    color: red !important;
}


/** event dashboard buttons **/
.event-dashboard .tl_submit_container ul {
    display: flex;
    flex-wrap: wrap;
}

.event-dashboard .tl_submit_container ul li {

    margin: 2px 4px 2px 2px;
}


/** Stick navigation to the bottom for large screens **/
@media (min-width: 1160px) {
    #main {
        padding-bottom: 50px;
    }

    .event-dashboard {
        position: fixed;
        bottom: 0;
        z-index: 900;
        width: 100%;
        max-width: 1198px;
    }

    .event-dashboard .tl_submit_container {
        background-color: #172b3b !important;
    }
}


/** tl_help additions **/
.tl_full_height {
    height:auto !important;
}

